--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 	<meta name="robots" content="All">
 	<meta name="author" content="Udgiver">
 	<meta name="copyright" content="Information om copyright">
-	
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 	<link href="css/styles.css" rel="stylesheet" type="text/css">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,8 +19,62 @@
 
 <body>
 
-<h1>hej</h1>
+<nav class="navbar navbar-expand-lg custom-navbar">
+    <div class="container-fluid">
 
+        <!-- Venstre side -->
+        <a class="navbar-brand ms-4 fs-3" href="#">Forside</a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavDropdown">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Højre side -->
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ms-auto me-4">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Aktiviteter</a>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button"
+                       data-bs-toggle="dropdown">
+                        Lokationer
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Køge</a></li>
+                        <li><a class="dropdown-item" href="#">Slagelse</a></li>
+                        <li><a class="dropdown-item" href="#">Næstved</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Om os</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+<header class="connected-starters">
+    <span class="word1">Connected</span>
+    <span class="word2">Starters</span>
+</header>
+
+
+<br>
+<br>
+
+
+<p class="forsidetekst1">Kickstart dine idéer - <br>sammen med Connected Starters</p>
+
+
+<br>
+
+
+<p class="forsidetekst2">Bliv en del af fællesskabet - se aktiviteter nedenunder</p>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
