Forside færdig + footer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	
-	<title>Sigende titel</title>
+	<title>Forside - Connected Starters</title>
 	
 	<meta name="robots" content="All">
 	<meta name="author" content="Udgiver">
@@ -19,11 +19,12 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg custom-navbar">
+
+<nav class="navbar navbar-expand-lg custom-navbar sticky-top">
     <div class="container-fluid">
 
         <!-- Venstre side -->
-        <a class="navbar-brand ms-4 fs-3" href="#">Forside</a>
+        <a class="navbar-brand ms-4 fs-3" href="index.html">Forside</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNavDropdown">
@@ -75,6 +76,121 @@
 
 
 <p class="forsidetekst2">Bliv en del af fællesskabet - se aktiviteter nedenunder</p>
+
+
+<div id="carouselExampleCaptions" class="carousel slide custom-carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="images/aktivitet1.jpg" class="d-block w-100" alt="Billede fra Lanceringsdag">
+            <div class="carousel-caption">
+                <h5>
+                    <a href="#" class="carousel-link">
+                    Lanceringsdag hos Køge!
+                    </a>
+                </h5>
+                <p>Dato: 02/08/26</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="images/aktivitet2.jpg" class="d-block w-100" alt="En gruppe, der laver gruppearbejde rundt om et bord">
+            <div class="carousel-caption">
+                <h5>
+                    <a href="#" class="carousel-link">
+                        Startup workshop hos Slagelse!
+                    </a>
+                </h5>
+                <p>Dato: 12/02/26</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="images/aktivitet3.jpg" class="d-block w-100" alt="En mand, som sidder ved et bord og coacher">
+            <div class="carousel-caption">
+                <h5>
+                    <a href="#" class="carousel-link">
+                        En til en coaching hos Næstved!
+                    </a>
+                </h5>
+                <p>Dato: 12/02/26</p>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
+
+<header class="connected-starters2">
+    <span class="word1">Connected</span>
+    <span class="word2">Starters</span>
+    <span class="word3">Lokationer</span>
+</header>
+
+
+<div class="lokabokse">
+    <div class="lokaboks1">
+        <h1>Køge</h1>
+        <p>Adresse: Lyngvej 21</p>
+        <p>Telefon: +45 20557241</p>
+        <p>Læs mere <a href="#">her</a> </p>
+    </div>
+    <div class="lokaboks1">
+        <h1>Slagelse</h1>
+        <p>Adresse: Bredahlsgade 1A</p>
+        <p>Telefon: +45 30557241</p>
+        <p>Læs mere <a href="#">her</a> </p>
+    </div>
+    <div class="lokaboks1">
+        <h1>Køge</h1>
+        <p>Adresse: Femøvej 3</p>
+        <p>Telefon: +45 40557241</p>
+        <p>Læs mere <a href="#">her</a> </p>
+    </div>
+</div>
+
+
+<div class="lokaboks2">
+    <h1>Sådan kommer du igang!</h1>
+    <p>1. Vælg din lokation</p>
+    <p>2. Find din aktivitet</p>
+    <p>3. Mød op og deltag</p>
+</div>
+
+
+<footer class="footer">
+    <div class="footer-container">
+        <div class="footer-col">
+            <h3>Zealand</h3>
+            <p>Connected<br>Starters</p>
+        </div>
+
+        <div class="footer-col">
+            <h3>Kontakt</h3>
+            <p>support@cszealand.com</p>
+            <p>+45 20557241</p>
+        </div>
+
+        <div class="footer-col">
+            <h3>Links</h3>
+            <a href="https://www.zealand.dk">www.zealand.dk</a>
+            <a href="https://www.connectedstarters.dk">www.connectedstarters.dk</a>
+        </div>
+    </div>
+</footer>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
+
 </body>
 </html>
