1. underside færdig + få justeringer

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
+
 <body>
 
 
@@ -35,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto me-4">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Aktiviteter</a>
+                    <a class="nav-link" href="aktiviteter.html">Aktiviteter</a>
                 </li>
 
                 <li class="nav-item dropdown">
