1. underside færdig + få justeringer 2

--- a/aktiviteter.html
+++ b/aktiviteter.html
@@ -17,6 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
+
 <body>
 
 
@@ -117,7 +118,7 @@
 <div id="carouselExampleCaptions" class="carousel slide custom-carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="images/aktivitet2.jpg" class="d-block w-100" alt="En gruppe, der laver gruppearbejde rundt om et bord">
+            <img src="images/aktivitet3.jpg" class="d-block w-100" alt="En mand, som sidder ved et bord og coacher">
             <div class="carousel-caption">
                 <h5>
                     <a href="index.html" class="carousel-link">
