--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <p>Læs mere <a href="#">her</a> </p>
     </div>
     <div class="lokaboks1">
-        <h1>Køge</h1>
+        <h1>Næstved</h1>
         <p>Adresse: Femøvej 3</p>
         <p>Telefon: +45 40557241</p>
         <p>Læs mere <a href="#">her</a> </p>
