sidste commit - alle sider færdige

--- a/aktiviteter.html
+++ b/aktiviteter.html
@@ -52,7 +52,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Om os</a>
+                    <a class="nav-link" href="om-os.html">Om os</a>
                 </li>
             </ul>
         </div>
@@ -87,10 +87,10 @@
 </div>
 
 
-<p class="forsidetekst12">Slagelse 12/02/26 - Startup Workshop!</p>
+<p class="forsidetekst12">Slagelse 12/02/26 - Startup workshop!</p>
 
 
-<p class="forsidetekst22">Slagelse har workshop-dag, workshoppen kommer til at handle om hvordan man skabe det bedste startup for sig selv, dette skal vi åbne med både lærring og øvelser</p>
+<p class="forsidetekst22">Slagelse har workshop-dag, workshoppen kommer til at handle om hvordan man kan skabe det bedste startup for sig selv, dette skal vi gøre med både lærring og øvelser</p>
 
 
 <div id="carouselExampleCaptions" class="carousel slide custom-carousel">
@@ -109,7 +109,7 @@
 </div>
 
 
-<p class="forsidetekst12">Næstved 12/02/26 - En til en Coaching!</p>
+<p class="forsidetekst12">Næstved 12/02/26 - En til en coaching!</p>
 
 
 <p class="forsidetekst22">Næstved får besøg af Connected Starters samarbejdspartnere, tidligere iværksættere, nuværende iværksætter og eksperter inden for området, som tilbyder en til en coaching</p>
