--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Om os</a>
+                    <a class="nav-link" href="om-os.html">Om os</a>
                 </li>
             </ul>
         </div>
@@ -90,7 +90,7 @@
             <img src="images/aktivitet1.jpg" class="d-block w-100" alt="Billede fra Lanceringsdag">
             <div class="carousel-caption">
                 <h5>
-                    <a href="#" class="carousel-link">
+                    <a href="aktiviteter.html" class="carousel-link">
                     Lanceringsdag hos Køge!
                     </a>
                 </h5>
@@ -101,7 +101,7 @@
             <img src="images/aktivitet2.jpg" class="d-block w-100" alt="En gruppe, der laver gruppearbejde rundt om et bord">
             <div class="carousel-caption">
                 <h5>
-                    <a href="#" class="carousel-link">
+                    <a href="aktiviteter.html" class="carousel-link">
                         Startup workshop hos Slagelse!
                     </a>
                 </h5>
@@ -112,7 +112,7 @@
             <img src="images/aktivitet3.jpg" class="d-block w-100" alt="En mand, som sidder ved et bord og coacher">
             <div class="carousel-caption">
                 <h5>
-                    <a href="#" class="carousel-link">
+                    <a href="aktiviteter.html" class="carousel-link">
                         En til en coaching hos Næstved!
                     </a>
                 </h5>
